--- a/staff/albert-fuente/initial-app/index.html
+++ b/staff/albert-fuente/initial-app/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
     <h1>Initial app</h1>
-    <div class="start">
+    <div class="start --panel">
         <a class="start__register">Register</a>
         <a class="start__login">Log in</a>
     </div>
@@ -41,11 +43,13 @@
             <input type="email"class="login__email">
             <label for="">Password:</label>
             <input type="email" class="login__pw">
+            <p class="credentialError"></p>
             <button type="sumbit" class="login-button">Log in</button>
             <button class="login__backButton" type="submit">Go back</button>
 
     </div>
 
     <script src="main.js"></script>
+    <script src="curray.js"></script>
 </body>
 </html>
